# SwimAssettoServer

./: .gitignore  AssettoServer.sln  AssettoServer.slnx  README.md  global.json  justfile  projects.ps1
AssettoServer/: AssettoServer.csproj  Startup.cs
AssettoServer.Hub.Contracts/: AssettoServer.Hub.Contracts.csproj
AssettoServer.Shared/: AssettoServer.Shared.csproj
AssettoServer.Tests/: AssettoServer.Tests.csproj
AutoModerationPlugin/: AutoModerationPlugin.cs  AutoModerationPlugin.csproj
CustomCommandPlugin/: CustomCommandPlugin.csproj
DiscordAuditPlugin/: DiscordAuditPlugin.csproj
FastLaneUtils/: FastLaneUtils.csproj
FastTravelPlugin/: FastTravelPlugin.cs
GeoIPPlugin/: GeoIPConfiguration.cs  GeoIPPlugin.csproj
LiveWeatherPlugin/: LiveWeatherPlugin.csproj
RaceChallengePlugin/: RaceChallengePlugin.csproj
RandomWeatherPlugin/: RandomWeatherPlugin.csproj
ReplayPlugin/: ReplayPlugin.cs  ReplayPlugin.csproj
ReportPlugin/: ReportPlugin.csproj
ReverseProxyPlugin/: ReverseProxyConfiguration.cs  ReverseProxyConfigurationValidator.cs  ReverseProxyGeoParams.cs  ReverseProxyHandshakeHandler.cs  ReverseProxyHttpMiddleware.cs  ReverseProxyLobbyHttpHandler.cs  ReverseProxyMiddleware.cs  ReverseProxyModule.cs  ReverseProxyPlugin.csproj  ReverseProxyTcpHandler.cs
SamplePlugin/: SamplePlugin.csproj
ScoreTrackerPlugin/: ScoreTracker.cs  ScoreTrackerConfiguration.cs  ScoreTrackerConfigurationValidator.cs  ScoreTrackerModule.cs  ScoreTrackerUtils.cs
SwimChasePlugin/: SwimChase.cs  (+2 more)
docker/: Dockerfile  bake.hcl  pyproject.toml  setup.py
(+118 files in other folders)
